fix DownloadFly rendering when sidebar is visible

--- a/web/assets/css/download-fly.less
+++ b/web/assets/css/download-fly.less
@@ -2,6 +2,7 @@
     background-color: rgb(50, 48, 48);
     padding: 30px;
     width: 800px;
+    height: fit-content;
     margin: 50px auto;
     display: flex;
     flex-direction: column;
